--- a/ecommerce/templates/edx/credit/_provider_detail.html
+++ b/ecommerce/templates/edx/credit/_provider_detail.html
@@ -14,7 +14,7 @@
 
             <p>
                 <strong>{% trans "Credits: " %}</strong> {{ provider.credit_hours }}<br>
-                <strong>{% trans "Price: " %}</strong> ${{ provider.price }}
+                <strong>{% trans "Price: " %}</strong> ₦{{ provider.price }}
             </p>
 
             <p>
