--- a/ecommerce/templates/edx/credit/checkout.html
+++ b/ecommerce/templates/edx/credit/checkout.html
@@ -44,7 +44,7 @@
                                 {% if code %}
                                 <div class="col-sm-2 col-sm-offset-10 price text-left">
                                     <span>{% trans "Price:" %}</span>
-                                    <span class="pull-right">$<span class="price"></span></span>
+                                    <span class="pull-right"><%= currency_sybmol %><span class="price"></span></span>
                                 </div>
                                 <div class="col-sm-2 col-sm-offset-10 discount text-left">
                                     <span>{% trans "Discount:" %} </span>
@@ -53,7 +53,7 @@
                                 {% endif %}
                                 <div class="col-sm-2 col-sm-offset-10  total-price text-left">
                                     <span>{% trans "Total:" %} <span>
-                                    <span class="pull-right">$<span class="total-price"></span></span>
+                                    <span class="pull-right"><%= currency_sybmol %><span class="total-price"></span></span>
                                 </div>
                             </div>
                         </div>
