--- a/ecommerce/static/templates/_course_credit_seats.html
+++ b/ecommerce/static/templates/_course_credit_seats.html
@@ -21,7 +21,7 @@
                 <% _.each(creditSeats, function (seat) { %>
                     <tr class="course-seat">
                         <td class="seat-credit-provider"><%= seat.get('credit_provider_display_name') %></td>
-                        <td class="seat-price"><%= currency_sybmol +  Number(seat.get('price')).toLocaleString() %></td>
+                        <td class="seat-price"><%= currency_symbol +  Number(seat.get('price')).toLocaleString() %></td>
                         <td class="seat-credit-hours"><%= seat.get('credit_hours') %></td>
                         <td class="seat-expires"><% var expires = seat.get('expires');
                             if (expires) {
