--- a/ecommerce/static/templates/honor_course_seat_form_field.html
+++ b/ecommerce/static/templates/honor_course_seat_form_field.html
@@ -2,7 +2,7 @@
     <div class="seat-type"><%= gettext('Honor') %></div>
 </div>
 <div class="col-sm-4">
-    <span class="price-label"><%= gettext('Price (in ' + currency + ')') %>:</span> <span class="seat-price"><%= currency_sybmol %>0.00</span>
+    <span class="price-label"><%= gettext('Price (in ' + currency + ')') %>:</span> <span class="seat-price"><%= currency_symbol %>0.00</span>
     <input type="hidden" name="price" value="0">
     <input type="hidden" name="certificate_type" value="honor">
     <input type="hidden" name="id_verification_required" value="false">
