--- a/ecommerce/static/templates/verified_course_seat_form_field.html
+++ b/ecommerce/static/templates/verified_course_seat_form_field.html
@@ -10,7 +10,7 @@
             <label for="price"><%= gettext('Price (in ' + currency + ')') %></label>
 
             <div class="input-group">
-                <div class="input-group-addon"><%= currency_sybmol %></div>
+                <div class="input-group-addon"><%= currency_symbol %></div>
                 <input type="number" class="form-control" name="price" id="price" min="5" step="1" pattern="\d+"
                        value="<%= price %>">
             </div>
